@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2023-09-25T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-09-26T00:00:00Z",
@@ -66,6 +66,11 @@
       "timestamp": "2023-10-08T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-09T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
