@@ -1,3 +1,12 @@
+2023-10-09T08:12:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6454004937 # 1234
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-09
+* notice: last 14d: unq all: 4 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 648 1022 / 670 1055
+* notice: next accum: outdated-unq outdated-all / unq all: 648 1022 / 672 1057
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -2 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2023-09-25 2023-10-09]
+
 2023-10-08T16:09:58Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6448656175 # 1232
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-08
